Shift picker corrections

--- a/demos/rent/assets/styles/style-shift-picker.css
+++ b/demos/rent/assets/styles/style-shift-picker.css
@@ -2,14 +2,14 @@
 /* 
 * Commons 
 */
-.mybooking-shiftpicker-content .h1 {
+.mybooking-rent-shift-picker-content .h1 {
 	font-size: 2rem;
 }
-.mybooking-shiftpicker-content .h2 {
+.mybooking-rent-shift-picker-content .h2 {
 	font-size: 1.5rem;
 }
-.mybooking-shiftpicker-content .h1, 
-.mybooking-shiftpicker-content .h2 {
+.mybooking-rent-shift-picker-content .h1, 
+.mybooking-rent-shift-picker-content .h2 {
 	padding: 1rem 0;
 	font-weight: bold;
 }
@@ -18,25 +18,25 @@
 /* 
 * Form head
 */
-.mybooking-shiftpicker-head	.field {
+.mybooking-rent-shift-picker-head	.field {
 	margin-top: 1rem;
 }
-.mybooking-shiftpicker-head	.field .control,
-.mybooking-shiftpicker-head	.field input:not([type="radio"]),
-.mybooking-shiftpicker-head	.field .select,
-.mybooking-shiftpicker-head	.field select {
+.mybooking-rent-shift-picker-head	.field .control,
+.mybooking-rent-shift-picker-head	.field input:not([type="radio"]),
+.mybooking-rent-shift-picker-head	.field .select,
+.mybooking-rent-shift-picker-head	.field select {
 	width: 100%;
 }
 
 /* 
 * Container head
 */
-.mybooking-shiftpicker-container-head {
+.mybooking-rent-shift-picker-container-head {
 	font-size: 2rem;
 	margin: 1rem 0;
 	text-transform: capitalize;
 }
-.mybooking-shiftpicker-container-arrows {
+.mybooking-rent-shift-picker-container-arrows {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -46,7 +46,7 @@
 /*
 * Container list
 */
-.mybooking-shiftpicker-container-list li {
+.mybooking-rent-shift-picker-container-list li {
 	margin: 0.5rem 0;
 	padding: 0.5rem;
 	background-color: rgb(241, 241, 241);
@@ -55,7 +55,7 @@
 	justify-content: space-between;
 	cursor: pointer;
 }
-.mybooking-shiftpicker-container-list li[data-status=disabled] {
+.mybooking-rent-shift-picker-container-list li[data-status=disabled] {
 	cursor: default;
 	opacity: 0.8;
 }
@@ -63,14 +63,14 @@
 /*
 * Container info panel
 */
-.mybooking-shiftpicker-container-info_content {
+.mybooking-rent-shift-picker-container-info_content {
 	border: 1px solid rgb(241, 241, 241);
 	margin: 0;
 	margin-bottom: 1rem;
 	padding: 1rem;
 }
-.mybooking-shiftpicker-container-info_content > span,
-.mybooking-shiftpicker-container-info_content > strong {
+.mybooking-rent-shift-picker-container-info_content > span,
+.mybooking-rent-shift-picker-container-info_content > strong {
 	display: block;
 	padding: 0 1rem;
 }
@@ -78,6 +78,6 @@
 /*
 * Container buttons
 */
-.mybooking-shiftpicker-container-buttons .button {
+.mybooking-rent-shift-picker-container-buttons .button {
 	width:  100%;
 }
